# velops.chronos.tracker

./: .gitignore  main.py  pyproject.toml  style.css
velops/chronos/: db.py  dialog.py  install.py  session.py  style.css  tracker.py  ui.py
velops/chronos/assets/: velops.chronos.tracker.desktop
velops/chronos/tests/: test_db.py  test_session.py  test_ui.py
