[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "velops.chronos.tracker"
version = "0.1.0"
description = "A professional project and task time tracker with GTK 4"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
dependencies = [
    "pygobject",
]

[project.scripts]
chronos = "velops.chronos.tracker:launch_gui"

[tool.setuptools.packages.find]
where = ["."]
include = ["velops*"]
